--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="content">
+      <div class="row justify-content-center">
+        <div class="col-lg-6">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
